修复bug，参考： https://github.com/abel533/Mapper/blob/master/extra/src/main/java/tk/mybatis/mapper/additional/insert/InsertListMapper.java http://www.pianshen.com/article/5621217053/

--- a/src/main/java/template/mapperTemplate.vm
+++ b/src/main/java/template/mapperTemplate.vm
@@ -3,7 +3,7 @@ package ${mapperPackage};
 import java.util.List;
 import ${entityPackage}.${beanName};
 import tk.mybatis.mapper.common.Mapper;
-import tk.mybatis.mapper.common.special.InsertListMapper;
+import tk.mybatis.mapper.additional.insert.InsertListMapper
 
 /**
 * <p>
